gen/NNGraphParser.py
# Generated from C:/Users/Asus/Desktop/NNGragh/NNGraph.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NNGraphParser ( Parser ):

    grammarFileName = "NNGraph.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'model'", "'{'", "'}'", "'input'", "':'", 
                     "'tensor'", "'('", "')'", "'output'", "'graph'", "'node'", 
                     "'edge'", "'->'", "'['", "'label'", "'='", "']'", "','", 
                     "'None'", "'config'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BOOL", "ID", "FLOAT", "INT", "STRING", 
                      "COMMENT_LINE", "COMMENT_BLOCK", "WS" ]

    RULE_program = 0
    RULE_modelDecl = 1
    RULE_inputDecl = 2
    RULE_outputDecl = 3
    RULE_graphBlock = 4
    RULE_graphStatement = 5
    RULE_nodeDecl = 6
    RULE_layerType = 7
    RULE_edgeDecl = 8
    RULE_label = 9
    RULE_paramList = 10
    RULE_param = 11
    RULE_value = 12
    RULE_shape = 13
    RULE_configBlock = 14
    RULE_configStatement = 15

    ruleNames =  [ "program", "modelDecl", "inputDecl", "outputDecl", "graphBlock", 
                   "graphStatement", "nodeDecl", "layerType", "edgeDecl", 
                   "label", "paramList", "param", "value", "shape", "configBlock", 
                   "configStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    BOOL=21
    ID=22
    FLOAT=23
    INT=24
    STRING=25
    COMMENT_LINE=26
    COMMENT_BLOCK=27
    WS=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modelDecl(self):
            return self.getTypedRuleContext(NNGraphParser.ModelDeclContext,0)


        def graphBlock(self):
            return self.getTypedRuleContext(NNGraphParser.GraphBlockContext,0)


        def EOF(self):
            return self.getToken(NNGraphParser.EOF, 0)

        def configBlock(self):
            return self.getTypedRuleContext(NNGraphParser.ConfigBlockContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = NNGraphParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.modelDecl()
            self.state = 33
            self.graphBlock()
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 34
                self.configBlock()


            self.state = 37
            self.match(NNGraphParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def inputDecl(self):
            return self.getTypedRuleContext(NNGraphParser.InputDeclContext,0)


        def outputDecl(self):
            return self.getTypedRuleContext(NNGraphParser.OutputDeclContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_modelDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelDecl" ):
                listener.enterModelDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelDecl" ):
                listener.exitModelDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelDecl" ):
                return visitor.visitModelDecl(self)
            else:
                return visitor.visitChildren(self)




    def modelDecl(self):

        localctx = NNGraphParser.ModelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_modelDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(NNGraphParser.T__0)
            self.state = 40
            self.match(NNGraphParser.ID)
            self.state = 41
            self.match(NNGraphParser.T__1)
            self.state = 42
            self.inputDecl()
            self.state = 43
            self.outputDecl()
            self.state = 44
            self.match(NNGraphParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def shape(self):
            return self.getTypedRuleContext(NNGraphParser.ShapeContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_inputDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputDecl" ):
                listener.enterInputDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputDecl" ):
                listener.exitInputDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputDecl" ):
                return visitor.visitInputDecl(self)
            else:
                return visitor.visitChildren(self)




    def inputDecl(self):

        localctx = NNGraphParser.InputDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inputDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(NNGraphParser.T__3)
            self.state = 47
            self.match(NNGraphParser.ID)
            self.state = 48
            self.match(NNGraphParser.T__4)
            self.state = 49
            self.match(NNGraphParser.T__5)
            self.state = 50
            self.match(NNGraphParser.T__6)
            self.state = 51
            self.shape()
            self.state = 52
            self.match(NNGraphParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def getRuleIndex(self):
            return NNGraphParser.RULE_outputDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputDecl" ):
                listener.enterOutputDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputDecl" ):
                listener.exitOutputDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutputDecl" ):
                return visitor.visitOutputDecl(self)
            else:
                return visitor.visitChildren(self)




    def outputDecl(self):

        localctx = NNGraphParser.OutputDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_outputDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(NNGraphParser.T__8)
            self.state = 55
            self.match(NNGraphParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def graphStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNGraphParser.GraphStatementContext)
            else:
                return self.getTypedRuleContext(NNGraphParser.GraphStatementContext,i)


        def getRuleIndex(self):
            return NNGraphParser.RULE_graphBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraphBlock" ):
                listener.enterGraphBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraphBlock" ):
                listener.exitGraphBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraphBlock" ):
                return visitor.visitGraphBlock(self)
            else:
                return visitor.visitChildren(self)




    def graphBlock(self):

        localctx = NNGraphParser.GraphBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_graphBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(NNGraphParser.T__9)
            self.state = 58
            self.match(NNGraphParser.T__1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11 or _la==12:
                self.state = 59
                self.graphStatement()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(NNGraphParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeDecl(self):
            return self.getTypedRuleContext(NNGraphParser.NodeDeclContext,0)


        def edgeDecl(self):
            return self.getTypedRuleContext(NNGraphParser.EdgeDeclContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_graphStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraphStatement" ):
                listener.enterGraphStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraphStatement" ):
                listener.exitGraphStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraphStatement" ):
                return visitor.visitGraphStatement(self)
            else:
                return visitor.visitChildren(self)




    def graphStatement(self):

        localctx = NNGraphParser.GraphStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_graphStatement)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.nodeDecl()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.edgeDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def layerType(self):
            return self.getTypedRuleContext(NNGraphParser.LayerTypeContext,0)


        def paramList(self):
            return self.getTypedRuleContext(NNGraphParser.ParamListContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_nodeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeDecl" ):
                listener.enterNodeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeDecl" ):
                listener.exitNodeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeDecl" ):
                return visitor.visitNodeDecl(self)
            else:
                return visitor.visitChildren(self)




    def nodeDecl(self):

        localctx = NNGraphParser.NodeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_nodeDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(NNGraphParser.T__10)
            self.state = 72
            self.match(NNGraphParser.ID)
            self.state = 73
            self.match(NNGraphParser.T__4)
            self.state = 74
            self.layerType()
            self.state = 75
            self.match(NNGraphParser.T__6)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 76
                self.paramList()


            self.state = 79
            self.match(NNGraphParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def getRuleIndex(self):
            return NNGraphParser.RULE_layerType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayerType" ):
                listener.enterLayerType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayerType" ):
                listener.exitLayerType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayerType" ):
                return visitor.visitLayerType(self)
            else:
                return visitor.visitChildren(self)




    def layerType(self):

        localctx = NNGraphParser.LayerTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_layerType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(NNGraphParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(NNGraphParser.ID)
            else:
                return self.getToken(NNGraphParser.ID, i)

        def label(self):
            return self.getTypedRuleContext(NNGraphParser.LabelContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_edgeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeDecl" ):
                listener.enterEdgeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeDecl" ):
                listener.exitEdgeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdgeDecl" ):
                return visitor.visitEdgeDecl(self)
            else:
                return visitor.visitChildren(self)




    def edgeDecl(self):

        localctx = NNGraphParser.EdgeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_edgeDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(NNGraphParser.T__11)
            self.state = 84
            self.match(NNGraphParser.ID)
            self.state = 85
            self.match(NNGraphParser.T__12)
            self.state = 86
            self.match(NNGraphParser.ID)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 87
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(NNGraphParser.STRING, 0)

        def getRuleIndex(self):
            return NNGraphParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = NNGraphParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(NNGraphParser.T__13)
            self.state = 91
            self.match(NNGraphParser.T__14)
            self.state = 92
            self.match(NNGraphParser.T__15)
            self.state = 93
            self.match(NNGraphParser.STRING)
            self.state = 94
            self.match(NNGraphParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNGraphParser.ParamContext)
            else:
                return self.getTypedRuleContext(NNGraphParser.ParamContext,i)


        def getRuleIndex(self):
            return NNGraphParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = NNGraphParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.param()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 97
                self.match(NNGraphParser.T__17)
                self.state = 98
                self.param()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(NNGraphParser.ValueContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = NNGraphParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(NNGraphParser.ID)
            self.state = 105
            self.match(NNGraphParser.T__15)
            self.state = 106
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(NNGraphParser.INT, 0)

        def FLOAT(self):
            return self.getToken(NNGraphParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(NNGraphParser.STRING, 0)

        def BOOL(self):
            return self.getToken(NNGraphParser.BOOL, 0)

        def shape(self):
            return self.getTypedRuleContext(NNGraphParser.ShapeContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = NNGraphParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_value)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(NNGraphParser.INT)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(NNGraphParser.FLOAT)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(NNGraphParser.STRING)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.match(NNGraphParser.BOOL)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.match(NNGraphParser.T__18)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.match(NNGraphParser.T__6)
                self.state = 114
                self.shape()
                self.state = 115
                self.match(NNGraphParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShapeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(NNGraphParser.INT)
            else:
                return self.getToken(NNGraphParser.INT, i)

        def getRuleIndex(self):
            return NNGraphParser.RULE_shape

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShape" ):
                listener.enterShape(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShape" ):
                listener.exitShape(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShape" ):
                return visitor.visitShape(self)
            else:
                return visitor.visitChildren(self)




    def shape(self):

        localctx = NNGraphParser.ShapeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_shape)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(NNGraphParser.INT)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 120
                self.match(NNGraphParser.T__17)
                self.state = 121
                self.match(NNGraphParser.INT)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfigBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def configStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNGraphParser.ConfigStatementContext)
            else:
                return self.getTypedRuleContext(NNGraphParser.ConfigStatementContext,i)


        def getRuleIndex(self):
            return NNGraphParser.RULE_configBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigBlock" ):
                listener.enterConfigBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigBlock" ):
                listener.exitConfigBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigBlock" ):
                return visitor.visitConfigBlock(self)
            else:
                return visitor.visitChildren(self)




    def configBlock(self):

        localctx = NNGraphParser.ConfigBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_configBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(NNGraphParser.T__19)
            self.state = 128
            self.match(NNGraphParser.T__1)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 129
                self.configStatement()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(NNGraphParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfigStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(NNGraphParser.ValueContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_configStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigStatement" ):
                listener.enterConfigStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigStatement" ):
                listener.exitConfigStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigStatement" ):
                return visitor.visitConfigStatement(self)
            else:
                return visitor.visitChildren(self)




    def configStatement(self):

        localctx = NNGraphParser.ConfigStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_configStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(NNGraphParser.ID)
            self.state = 138
            self.match(NNGraphParser.T__15)
            self.state = 139
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





